Switch back to -Xmx for java memory specification
Signed-off-by: Byron Marohn <combustible@live.com>